fixing alignment in chrome for timesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -701,3 +701,6 @@ td.normnav {
 
   }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+ div{top:0;} 
+}
